--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">New York Times</string>
+    <string name="article_title">Title:</string>
+    <string name="article_date">Date:</string>
+    <string name="article_author">Author</string>
+    <string name="article_content">Content</string>
 </resources>
