Added Facebook activity, facebook to the manifest and added facebook id to strings file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="article_date">Date:</string>
     <string name="article_author">Author</string>
     <string name="article_content">Content</string>
+    <string name="facebook_app_id">524135594459226</string>
 </resources>
