--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="article_date">Date:</string>
     <string name="article_author">Author</string>
     <string name="article_content">Content</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="logo_desc">App logo</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="amino_title">Glycine</string>
+    <string name="amino_content">Click on the Navigation Drawer icon on the top left to selection a menu Click on the Navigation Drawer icon on the top left to selection a menu Click on the Navigation Drawer icon on the top left to selection a menu </string>
 </resources>
+
