Before changing fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="article_content">Content</string>
     <string name="facebook_app_id">524135594459226</string>
     <string name="logo_desc">App logo</string>
+    <string name="snippet">Snippet</string>
 </resources>
 
