--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">New York Times Latest News</string>
+    <string name="app_name">New York Times Dernières Nouvelles</string>
     <string name="article_title">Titre:</string>
     <string name="article_date">Date:</string>
     <string name="article_author">Auteur</string>
