Created preference xml and java, created a query for each item except most popular and created a notification for it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="arts">Arts</string>
     <string name="new_york">New York</string>
     <string name="magazine">Magazine</string>
+    <string name="notification_preferences">Notification Preferences</string>
 </resources>
 
