--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="arts">Arts</string>
     <string name="new_york">New York</string>
     <string name="magazine">Magazine</string>
+    <string name="preferences">Preferences</string>
+    <string name="search_articles">Search Articles</string>
 </resources>
 
