LAnguage support complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">NYT Latest News</string>
-    <string name="article_title">Title:</string>
-    <string name="article_date">Date:</string>
+    <string name="article_title">Title</string>
+    <string name="article_date">Date</string>
     <string name="article_author">Author</string>
     <string name="article_content">Content</string>
     <string name="facebook_app_id">524135594459226</string>
